# self_ctp

./: CMakeLists.txt  CreateFiel.h  CreateFile.cpp  Ctp_Project.vcxproj  Ctp_Project.vcxproj.filters  CustomMdSpi.cpp  CustomMdSpi.h  CustomTradeSpi.cpp  CustomTradeSpi.h  main.cpp
TradingData/: Private.con  Public.con  TradingDay.con
x64/Debug/: Ctp_Project.exe.recipe  vc142.idb
x64/Debug/Ctp_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ctp_Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
